--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -6,7 +6,7 @@
 <ion-content padding>
 
   <h2>Productos desacados</h2>
-  <ion-slides>
+  <ion-slides [options]="mySlideOptions">
     <ion-slide>
       <h1>Producto 1</h1>
     </ion-slide>
