--- a/pages/producto-detalle/producto-detalle.html
+++ b/pages/producto-detalle/producto-detalle.html
@@ -8,12 +8,12 @@
 
   <ion-navbar>
     <ion-title>Detalle del producto</ion-title>
-    <ion-buttons start>
+    <!--<ion-buttons start>
       <button (click)="dismiss()">
         <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
         <span showWhen="ios">Cancelar</span>
         </button>
-    </ion-buttons>
+    </ion-buttons>-->
   </ion-navbar>
 
 </ion-header>
