--- a/pages/tabs/tabs.html
+++ b/pages/tabs/tabs.html
@@ -1,16 +1,21 @@
 <ion-header>
 
-  <ion-navbar #content>
+  <!--<ion-navbar>-->
+  <!--<button ion-button menuToggle (click)="openMenu()">
+      <ion-icon name="menu"></ion-icon>
+    </button>-->
+  <!--<ion-title>
+      Tienda mobkii
+    </ion-title>-->
+  <!--</ion-navbar>-->
+  <!--<ion-toolbar>
+    <ion-title>Perfil</ion-title>
     <button ion-button menuToggle (click)="openMenu()">
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>
-      Tienda mobkii
-    </ion-title>
-  </ion-navbar>
-
+  </ion-toolbar>-->
 </ion-header>
-<ion-menu side="left" [content]="content">
+<!--<ion-menu side="left" [content]="content">
   <ion-content>
     <ion-searchbar>
     </ion-searchbar>
@@ -19,14 +24,16 @@
       <ion-item>testign2 </ion-item>
     </ion-list>
   </ion-content>
-</ion-menu>
+</ion-menu>-->
 
 <!--<ion-fab bottom right>
-  <button ion-fab color="light"><ion-icon name="arrow-dropleft"></ion-icon></button>
+  <button ion-fab color="light"><ion-icon name="cart"></ion-icon>4</button>
 </ion-fab>-->
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Productos" tabIcon="list-box"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Carrito" tabIcon="cart"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Perfil" tabIcon="contacts"></ion-tab>
-</ion-tabs>
+<div *ngIf="logeado">
+  <ion-tabs selectedIndex="0">
+    <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Productos" tabIcon="list-box"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Carrito" tabBadge="({{Carrito.productos}})" tabIcon="cart"></ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="Perfil" tabIcon="contacts"></ion-tab>
+  </ion-tabs>
+</div>
