--- a/pages/carrito/carrito.html
+++ b/pages/carrito/carrito.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>carrito</ion-title>
+    <ion-title>Carrito</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -119,6 +119,8 @@
     <ion-col>
       <h3> ${{Carrito.total}}</h3>
     </ion-col>
+    <ion-col>
+      <button ion-button block (click)="procesarPedido()">Procesar pedido</button>
+    </ion-col>
   </ion-row>
-  <button ion-button block (click)="Carrito.crearPedido()">Crear pedido</button>
 </ion-footer>
