--- a/pages/pedido-detalle/pedido-detalle.html
+++ b/pages/pedido-detalle/pedido-detalle.html
@@ -7,26 +7,82 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Detalle del pedido</ion-title>
-    <ion-buttons start>
-      <button (click)="dismiss()">
-        <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
-        <span showWhen="ios">Cancelar</span>
-        </button>
-    </ion-buttons>
+    <ion-title>pedido-detalle</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <ion-card *ngFor="let pedido of Perfil.pedidos">
-    <ion-card-content>
-      <ion-card-title>
-        Pedido id: {{pedido.id}}
-      </ion-card-title>
-      <ion-label>Total: {{pedido.subtotal}}</ion-label>
-      <ion-label>Productos: {{pedido.total_producto}}</ion-label>
-    </ion-card-content>
-  </ion-card>
+  <!--<ion-row>
+    Detalles del pedido {{pedido}}
+  </ion-row>
+  <ion-grid *ngFor="let producto of Perfil.pedido_detalle">
+    <ion-row>
+      <ion-col><img src="http://luis.mbk11.net/laravel/public/{{producto.imagen}}" alt=""></ion-col>
+      <ion-col>Producto:</ion-col>
+      <ion-col>{{producto.nombre}}</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>Cantidad:</ion-col>
+      <ion-col>{{producto.cantidad}}</ion-col>
+    </ion-row>
+  </ion-grid>-->
+
+  <!--<ion-list>
+    <ion-item-group>
+      <ion-item-divider light>Detalles del pedido {{pedido}}</ion-item-divider>
+      <ion-item *ngFor="let producto of Perfil.pedido_detalle">
+        <ion-thumbnail item-left>
+          <img src="http://luis.mbk11.net/laravel/public/{{producto.imagen}}">
+        </ion-thumbnail>
+        <ion-row>
+          <ion-col text-left>
+
+            <h2>{{producto.nombre}}</h2>
+            <p>Cantidad: <b>{{producto.cantidad}}</b></p>
+          </ion-col>
+          <ion-col text-left>
+            <p>Precio: <b>{{producto.precio}}</b></p>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-item-group>
+  </ion-list>-->
+
+  <ion-list>
+    <ion-list-header>Pedido {{pedido}}</ion-list-header>
+    <ion-item class="noborder" text-left>
+      <ion-row>
+        <ion-col>Direccion: {{Perfil.direccion}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>Total: ${{Perfil.total}}</ion-col>
+      </ion-row>
+    </ion-item>
+    <ion-item-divider>Productos</ion-item-divider>
+    <ion-item>
+      <ion-row text-left *ngFor="let producto of Perfil.pedido_detalle">
+        <ion-col>{{producto.nombre}}</ion-col>
+        <ion-col>{{producto.cantidad}}</ion-col>
+        <ion-col>{{producto.precio}}</ion-col>
+      </ion-row>
+    </ion-item>
+  </ion-list>
+
+  <ion-fab bottom left (click)="dismiss()">
+    <button ion-fab mini><ion-icon name="arrow-back"></ion-icon></button>
+  </ion-fab>
 </ion-content>
+
+<ion-footer>
+  <ion-row text-center>
+    <ion-col>
+      <h3>Total:</h3>
+    </ion-col>
+    <ion-col>
+      <h3> ${{Perfil.total}}</h3>
+    </ion-col>
+  </ion-row>
+  <!--<button ion-button block (click)="Carrito.crearPedido()">Crear pedido</button>-->
+</ion-footer>
