--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -5,27 +5,57 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar>
+    <ion-title>Perfil</ion-title>
+    <ion-buttons end (click)="logout()">
+      <button ion-button>
+        <ion-icon name="log-out"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 
-  <ion-navbar>
-    <ion-title>perfil</ion-title>
-  </ion-navbar>
-
+  <ion-segment [(ngModel)]="accion">
+    <ion-segment-button value="perfil">
+      Perfil
+    </ion-segment-button>
+    <ion-segment-button value="pedidos" (click)="checkToast()">
+      Pedidos
+    </ion-segment-button>
+  </ion-segment>
 </ion-header>
 
 
 
 <ion-content padding text-center>
-  <ion-list>
 
-    <ion-item text-center>
-      <img src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" alt="">
-    </ion-item>
-    <ion-item>
-      <h2>Nombre: {{Perfil.perfil.nombre}}</h2>
-      <h3>Correo: {{Perfil.perfil.correo}}</h3>
-      <p>Acerca de ti: {{Perfil.perfil.descripcion}}</p>
-    </ion-item>
-  </ion-list>
+  <div [ngSwitch]="accion">
+    <div *ngSwitchCase="'perfil'">
+      <ion-list>
+        <ion-item text-center>
+          <img src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png" alt="">
+        </ion-item>
+        <ion-item>
+          <h2>Nombre: {{Perfil.perfil.nombre}}</h2>
+          <h3>Correo: {{Perfil.perfil.correo}}</h3>
+          <!--<p>Direccion: {{Perfil.perfil.direccion}}</p>-->
+        </ion-item>
+      </ion-list>
+      <!--<button ion-button full outline small icon-left (click)="logout()">
+        <ion-icon name="log-out"></ion-icon>
+        Cerrar sesión
+      </button>-->
+    </div>
+    <div *ngSwitchCase="'pedidos'">
+      <ion-list>
+        <ion-item *ngFor="let pedido of Perfil.pedidos" (click)="detallePedido(pedido.id)">
+          <ion-label>Pedido id: {{pedido.id}}</ion-label>
+          <ion-label>Total: {{pedido.subtotal}}</ion-label>
+          <ion-label>Productos: {{pedido.total_producto}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
+
 
   <!--<button ion-button round (click)="Perfil.getPedidos()">Pedidos</button>-->
 
@@ -40,6 +70,6 @@
   </ion-card>
 </ion-content>-->
 </ion-content>
-<ion-footer *ngIf="Perfil.pedidos">
-  <button ion-button block (click)="getPedidos()">Mis pedidos</button>
-</ion-footer>
+<!--<ion-footer *ngIf="Perfil.pedidos">
+
+</ion-footer>-->
