--- a/pages/producto-lista/producto-lista.html
+++ b/pages/producto-lista/producto-lista.html
@@ -15,13 +15,13 @@
 <ion-content padding>
   <ion-list>
     <ion-card *ngFor="let producto of productos">
-      <ion-card-content>
+      <ion-card-content text-nowrap>
         <img src="http://luis.mbk11.net/laravel/public/{{producto.imagen}}" alt="" (click)="mostrarProducto(producto)">
         <h2 (click)="mostrarProducto(producto)"><b>{{producto.nombre}}</b></h2>
         <p>
           Precio: <b>${{producto.precio}}</b>
+          <button ion-button mini><ion-icon name="cart" (click)="agregarCarrito(producto.id, producto.nombre, producto.precio, producto.imagen)"></ion-icon></button>
         </p>
-        <button mini><ion-icon name="cart" (click)="agregarCarrito(producto.id, producto.nombre, producto.precio, producto.imagen)"></ion-icon></button>
       </ion-card-content>
     </ion-card>
   </ion-list>
