--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Inicio de sesion</ion-title>
+    <ion-title text-center>Inicio de sesion</ion-title>
   </ion-navbar>
 
 </ion-header>
