--- a/pages/pedido-detalle/pedido-detalle.html
+++ b/pages/pedido-detalle/pedido-detalle.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>pedido-detalle</ion-title>
+    <ion-title text-center>pedido-detalle</ion-title>
   </ion-navbar>
 
 </ion-header>
