--- a/pages/pedido-lista/pedido-lista.html
+++ b/pages/pedido-lista/pedido-lista.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Detalle del pedidosss</ion-title>
+    <ion-title text-center>Detalle del pedidos</ion-title>
     <ion-buttons right>
       <button>
         <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
