--- a/pages/procesar-pedido/procesar-pedido.html
+++ b/pages/procesar-pedido/procesar-pedido.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>procesar-pedido</ion-title>
+    <ion-title text-center>Procesar pedido</ion-title>
   </ion-navbar>
 
 </ion-header>
