--- a/pages/producto-detalle/producto-detalle.html
+++ b/pages/producto-detalle/producto-detalle.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Detalle del producto</ion-title>
+    <ion-title text-center>Detalle del producto</ion-title>
     <!--<ion-buttons start>
       <button (click)="dismiss()">
         <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
