--- a/pages/carrito/carrito.html
+++ b/pages/carrito/carrito.html
@@ -7,49 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Carrito</ion-title>
+    <ion-title text-center>Carrito</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <!--<ion-item-sliding *ngFor="let producto of Carrito.localCarrito">
-    <ion-item>
-      <ion-label> {{producto.nombre}} </ion-label>
-      <ion-label> {{producto.precio}} </ion-label>
-      <ion-item-options side="right">
-        <button color="dark">
-          <ion-icon name="create"></ion-icon>Editar
-        </button>
-        <button color="danger">
-         <ion-icon name="remove-circle"></ion-icon>Eliminar
-        </button>
-      </ion-item-options>
-    </ion-item>
-  </ion-item-sliding>-->
-
-  <!--<ion-list>
-    <ion-item>
-      <ion-label> Nombre </ion-label>
-      <ion-label> Precio </ion-label>
-      <ion-label> Cantidad </ion-label>
-    </ion-item>
-    <ion-item-sliding *ngFor="let producto of Carrito.localCarrito">
-      <ion-item>
-        <ion-label> {{producto.nombre}} </ion-label>
-        <ion-label> {{producto.precio}} </ion-label>
-        <ion-label> {{producto.cantidad}} </ion-label>
-        <ion-label> <ion-icon name="remove"></ion-icon> </ion-label>
-        <ion-label> <ion-icon name="add"></ion-icon> </ion-label>
-      </ion-item>
-      <ion-item-options side="right">
-        <button ion-button (click)="favorite(item)">Favorite</button>
-        <button ion-button color="danger" (click)="share(item)">Eliminar</button>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>-->
-
   <ion-list *ngIf="Carrito.total > 0">
     <ion-item-group>
       <ion-item-divider light>Productos</ion-item-divider>
