--- a/pages/categoria/categoria.html
+++ b/pages/categoria/categoria.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Productos</ion-title>
+    <ion-title text-center>Producto</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -19,10 +19,10 @@
 
 
   <ion-list>
-    <ion-list-header>Categorias</ion-list-header>
+    <h2>Categorias</h2>
     <ion-item *ngFor="let categoria of categorias">
       <ion-label (click)="getCategoria(categoria.nombre)">
-        {{categoria.nombre}}
+        <b>{{categoria.nombre}}</b>
       </ion-label>
     </ion-item>
   </ion-list>
