--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-toolbar>
-    <ion-title>Perfil</ion-title>
+    <ion-title text-center>Perfil</ion-title>
     <ion-buttons end (click)="logout()">
       <button ion-button>
         <ion-icon name="log-out"></ion-icon>
